fixed blurry logo see #50

--- a/assets/scss/components/header/_navigation.scss
+++ b/assets/scss/components/header/_navigation.scss
@@ -478,6 +478,10 @@
 
 }
 
+.site-logo img {
+  transform: translateZ(0);
+}
+
 .site-header {
   @include wp-offset(top, 0);
 
